# ocrbenchv2-eval

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  requirements.txt
MultimodalOCR/OCRBenchv2/: pyproject.toml
MultimodalOCR/OCRBenchv2/src/OCRBenchv2/: IoUscore_metric.py  TEDS_metric.py  spotting_metric.py
MultimodalOCR/OCRBenchv2/src/OCRBenchv2/spotting_eval/: script.py
scripts/: eval.py  ocrbench_run.py  update_aws_env.sh
src/core/: pyproject.toml
src/core/src/core/: eval.py  get_score.py
